--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<header class="navbar">
+<header class="navbar sticky-top flex-md-nowrap p-0">
     <a href="#" class="navbar-brand cold-md-3 col-lg-2 px-3">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0)">
@@ -45,7 +45,7 @@
             </defs>
         </svg>
     </a>
-    <ul class="navbar-nav pt-5">
+    <ul class="navbar-nav">
         <li class="nav-item text-nowrap">
             <a href="#" class="nav-link">Sign Out</a>
         </li>
